# MYG

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  clean.cmake  cmake_install.cmake
src/byond/: ByondFiles.h  ByondTypes.h  ByondVarWrapper.h  ByondVars.h  CMakeLists.txt  CachedPattern.h  Makefile  Util.h  byondConfig.cmake  byond_files.h  byond_types.h  byond_vars.h  cmake_install.cmake  exceptionhelper.h  libbyond-core.so.1.0.0  libbyond.so.1.0.0  library.cpp  library.h  stringbuilder.h  stringhelper.h  tangible_filesystem.h  var_wrapper.h  vectorhelper.h
src/byond/DMI/: DMI.h  errors.h
src/byond/DMI/codecs/: file.cpp  png.cpp  png.h  webp.cpp  webp.h
src/byond/DMM/: Location.h  TileInstance.h  dmm.h
src/byond/byond-core.dir/Debug/: byond-core.dll.recipe
src/byond/byond.dir/Debug/: byond.dll.recipe
src/byond/byond.dir/Release/: byond.dll.recipe
src/byond/dme/: Dme.h  dme.h
src/byond/dme/parser/: DmeParser.h  FileLine.h  Parser.h  PostParser.h  PreParser.h  WordReplacer.h
src/byond/objtree/: ObjInstance.h  ObjectTree.h  ObjectTreeItem.h  ObjectTreeParser.h  node.hpp
src/byond/parser/: DME_parser.h
src/byond/tree/: ByondTree.h  DME_tree.h  DME_tree_item.h  DME_tree_listener.h  Icon.h  ModifiedType.h
src/byond/utils/: cached_pattern.h  string_builder.h  string_helper.h  tangible_filesystem.h  util.h
src/editor/: CMakeLists.txt  Makefile  cmake_install.cmake  code_editor_interface.h  editor.cpp  editor.hpp  initial_dme.json
src/editor/DMI/: DMI.cpp  DMI.h  DMIRead.cpp  DMIRead.h  IconState.h  IconSubstate.h  RenderInstance.h  errors.cpp
src/editor/DMI/codecs/: file.cpp  file.h  image.h  png.cpp  png.h
src/editor/Debug/: imgui.lib
src/editor/Editor.dir/Debug/: Editor.ilk
src/editor/code_editor/: code_editor_interface.h
src/editor/map_editor/: map_editor_interface.h
src/editor/source_navigation/: object_tree.cpp  object_tree.h  source_navigation.cpp  source_navigation.h
src/editor/source_navigation/tree/: DME_Tree_Model.h  DME_Tree_Node.h
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Release/ALL_BUILD/: ALL_BUILD.recipe
